--- a/DO/Protokoll/DO_Protokoll_aufg.tex
+++ b/DO/Protokoll/DO_Protokoll_aufg.tex
@@ -17,8 +17,8 @@ abgeschätzt werden. Dabei sind:
 \begin{center}
 	\begin{minipage}{.9\textwidth}
 		d: Abstand zur Quelle\\
-		A: Aktivität der Quelle am Versuchstag(23.10.2015), \\
-		Referenzwert $A(27.02.2008) = 5,0\ \unit{GBq} \equiv A_0$\\
+		A: Aktivität der Quelle am Versuchstag(23$\ldotp$10$\ldotp$2015), \\
+		Referenzwert $A(27\ldotp02\ldotp2008) = 5,0\ \unit{GBq} \equiv A_0$\\
 		$\Gamma$: Dosisleistungskonstante
 	
 	%----------------------------------------Tabelle einfügen---------------------------------
