--- a/DO/Protokoll/DO_Protokoll_ausw.tex
+++ b/DO/Protokoll/DO_Protokoll_ausw.tex
@@ -22,9 +22,9 @@ Die roten Kästchen im Bild bezeichnen die vier Punkte, an denen die BeO-Detekto
 \subsubsection{Strahlungswerte im Labor am Anfang des Versuchstages}
 
 Schauen wir uns nun interessante Orte an. Tabelle \ref{dft:Arbeitsplatz} zeigt deutlich, dass am PC-Arbeitsplatz kein Risiko besteht, die 6mSv, die ein Praktikant oder Auszubildender im Jahr nicht überschreiten darf, zu erreichen. Nähert man sich der Quelle auf 50cm an und bleibt dahinter stehen, so verringert sich offenbar die maximale Aufenthaltsdauer pro Tag. Offenbar ist ein achtstündiger Arbeitstag noch immer in der Maximaldauer von 21 Stunden enthalten. \\
-Jetzt wird es interessanter. Links und rechts von der Quelle, scheint die Abschirmung des Kollimators nicht mehr so stark wie hinter der Quelle. Ein Arbeitstag darf von einem Praktikanten also nicht daneben verbracht werden, sondern, unter Berücksichtigung der Fehler, die man während der Messung durch Zittrigkeit erzeugt, höchsten 7 Stunden - pro Tag, 7 Tage die Woche. 
+Jetzt wird es interessanter. Links und rechts von der Quelle, scheint die Abschirmung des Kollimators nicht mehr so stark wie hinter der Quelle. Ein Arbeitstag darf von einem Praktikanten also nicht daneben verbracht werden, sondern höchsten 7 Stunden - pro Tag, 7 Tage die Woche. 
 In der Strahlrichtung vor der Quelle misst man erwartungsgemäß deutlich höhere Dosen, die die maximale Verweildauer pro Tag minimieren. 8cm vor der verschlossenen Kollimatoröffnung sollte man sich als Student möglichst weniger als 20 Minuten aufhalten.\\
-Deutlich wird auch, dass die Belastung durch Strahlung überall um die Quelle größer wird, wenn man den Kollimatorverschluss öffnet. So haben wir hinter dem Kollimator zwar immer noch fast zwei Arbeitstage, um die Eintagesagesdosis zu erreichen, verlieren aber in Zahlen sechst Stunden an Aufenthaltsdauer. \\
+Deutlich wird auch, dass die Belastung durch Strahlung überall um die Quelle größer wird, wenn man den Kollimatorverschluss öffnet. So haben wir hinter dem Kollimator zwar immer noch fast zwei Arbeitstage, um die Tagesagesdosis zu erreichen, verlieren aber in Zahlen sechs Stunden an Aufenthaltsdauer. \\
 Dabei ist zu beachten, dass die Tagesdosis den ganzen Tag betrifft, also 24 Stunden.
 Die Maximaldauer ergibt sich aus der durchschnittlichen Tagesdosis folgendermaßen:
 
@@ -33,14 +33,14 @@ Die Maximaldauer ergibt sich aus der durchschnittlichen Tagesdosis folgendermaß
 \end{equation*}
 \vspace{2mm}
 Dabei trägt \.D die Einheit mSv/h\\
-Bezüglich der Messergegbnisse kann man noch weitere Fehlerquellen erwähnen. Das verwendete Dosimeter  ist nicht nur einer Unsicherheit durch den Haltenden ausgesetzt, sondern wurde auch bemerkt, dass zu verschiedenen Zeitpunkten die Messwerte sprungartig in die Höhe schnellten und sich nach ca. zwei Minuten senkten, was in etwa der Zeit für die Mittelung des Gerätes entspricht.
+Bezüglich der Messergebnisse kann man noch weitere Fehlerquellen erwähnen. Das verwendete Dosisleistungsmessgerät  ist nicht nur einer Unsicherheit durch den Haltenden ausgesetzt, sondern es wurde auch bemerkt, dass zu verschiedenen Zeitpunkten die Messwerte sprungartig in die Höhe schnellten und sich nach ca. zwei Minuten normalisierten, was mehreren Intervallen entspricht, über die das Gerät mittelt. Dies wurde in etwa einem Meter Abstand von der Quelle kurz nach der Messung der Dosisleistung auf der linken Seite der Quelle beobachtet. 
 
 \subsubsection{Strahlendosis im Labor über 2 Tage}
 Nun schauen wir uns Tabelle \ref{dft:Raum} an. Hier wurden Daten über fast zwei Tage gesammelt. Man sieht 
 deutlich, dass der Mitfahrer, welcher am Versuchstag immer schwankenden Werten ausgesetzt war, eine Dosis von 
 etwa 0,5mSv gemessen hat. Dies entspricht etwa der Hälfte von dem, was eine Standardperson in einem Jahr an 
 künstlicher Strahlenzufuhr erfahren darf. Fraglich ist allerdings, ob dieser Wert nicht ein Ergebnis von Störungen, 
-die andere Experimente verursacht haben, ist, da auch mit dem tragbaren Dosimeter zwischenzeitlich einzelne Peaks gemessen wurden.
+die andere Experimente verursacht haben, ist, da auch mit dem tragbaren Dosisleistungsmessgerät zwischenzeitlich einzelne Peaks gemessen wurden, wenngleich der Wert realistisch scheint.
 Man erkennt allerdings gut, dass der BeO-Sensor, der hinter der Quelle lag, eine deutlich geringere Strahlendosis maß als jene, die auf der Steckerleiste 1,8m vor und auf der Steckerleiste neben der Quelle lagen. Dies bestätigt die Vermutung, die Abschirmung hinter der Quelle sei stärker als jene an den Seiten.
 
 \subsection{Winkelabhängigkeit einer Ionisationskammer}
@@ -55,7 +55,7 @@ Man erkennt allerdings gut, dass der BeO-Sensor, der hinter der Quelle lag, eine
         \minipend
     \end{center}
     \vspace{3mm}
-    Bei 180° kann man deutlich ein Maximum des Ansprechvermögens bei konstant angenommener Aktivität der Quelle erkennen. Dies entspricht der uns durch einen grünen Strich vorgegebenen Vorzugsrichtung. Ebenfalls deutet sich eine asymmetrische Empfindlichkeit über den Winkel $\alpha$ an. 
+    Bei 180° kann man deutlich ein Maximum des Ansprechvermögens bei konstant angenommener Aktivität der Quelle erkennen. Dies entspricht der uns durch einen roten Strich vorgegebenen Vorzugsrichtung. Ebenfalls deutet sich eine asymmetrische Empfindlichkeit über den Winkel $\alpha$ an. 
 
 
 \subsection{Abstandsquadratgesetz}
@@ -92,3 +92,12 @@ Wir haben in Tabelle \ref{dft:Aufweitung} den Zusammenhang zwischen dem transver
     \vspace{5mm}
 \end{center}
 Man sieht, dass sich die Dosisleistung bis zu einem Abstand $d=0,07\ \unit{m}$ nicht ändert, da dies der Bereich ist, auf dem die aus der Kollimatoröffnung austretenden Photonen entweder direkt oder durch Beugung an der Öffnung auftreffen. Für größere Abstände fällt die Dosis - wie erwartet - rapide ab, da dann ausschließlich wenige gebeugte oder reflektierte Photonen in diese Bereiche geraten beziehungsweise die meisten $\gamma$-Quanten durch die Abschirmung gestoppt werden.
+
+\section{Diskussion}
+In Aufgabe 1 werden Strahlenschutzkontrollmessungen vorgenommen. Die Ergebnisse fallen erwartungsgemäß aus. An der Quelle sollte man sich weniger lang aufhalten als in zwei Metern Entfernung am PC-Arbeitsplatz. Man lernt außerdem, dass die Zeit, die man während der Öffnung des Kollimators in dessen Nähe verbringt, möglichst noch kleiner sein sollte als bei verschlossenem Kollimator. So werden die Grenzwerte für Auszubildende in einem Abstand von 50 Zentimetern bei geöffneter Kollimierung sechs Stunden früher erreicht als bei geschlossener Abdeckung. 
+Von den BeO-Sonden erhält man Daten, die dies bestätigen und für den \glqq Mitfahrer \grqq die Summe der Strahlendosen über zwei Tage, welche sogar klar macht, dass die Grenzwerte für nicht beruflich strahlenexponierte Menschen sehr schnell erreicht werden, sofern sie sich direkt vor der Quelle befinden.\\
+In Aufgabe 2 wird die Winkelabhängigkeit einer Ionisationskammer untersucht. Es stellt sich anhand der Messwerte heraus, dass diese keineswegs eine Symmetrie bezüglich der Winkel aufweisen muss, wie man es möglicherweise erwartet. Als optimalen Winkel wurde $\phi = \unit[180]{°}$ ermittelt, was genau der oben erwähnten Markierung entspricht. An dieser Stelle ermittelt man die Referenzdosis für die OSL-Dosimetrie. Die Referenzdosisleistung beträgt $D_{ref} = \unit[0,309\pm0,002]{\mu Gy/s}$. Diese benötigt man, um das Ansprechvermögen der BeO-Detektoren zu bestimmen.\\
+Aufgabe 4 besteht darin, mit dem BeO$_{max}$-System Dosen in verschiedenen Abständen zu vermessen, um damit das Abstandsquadratgesetz zu bestätigen. Dies ist auch gelungen.\\
+Zuletzt wird noch die Strahlaufweitung, welche durch die Kollimatoröffnung hervorgerufen wird, untersucht. Dies ist Aufgabe 5. Dies wurde mittels der Abhängigkeit der Dosisleistung vom senkrechten Abstand von Strahlmittelpunkt vorgenommen. Bis zu einem Abstand $s = \unit[7]{cm}$ bleibt die Dosisleistung annähernd konstant. Darüber hinaus kann man erkennen, wie sie rapide abfällt. 
+
+
