--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -1,27 +1,32 @@
 \section{Durchführung}
 
 \subsection{Strahlenschutzkontrollmessungen}
-Im Ersten Arbeitsschritt haben wir die Dosen an verschiedenen Stellen im Versuchsraum vermessen. Dabei ist zu beachten, dass das verwendete Dosimeter Messwerte über einen bestimmten Zeitraum (ca. 30 Sekunden) mittelt. Außerdem handelt es sich um die Dosen, welche am morgen zum Arbeitsbeginn (Tabelle \ref{dft:Arbeitsplatz}) gemessen wurden. 
-Im Zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin am 21.10.2015 um 16:30 Uhr im Raum verteilt deponiert wurden, am Nachmittag des Versuchstages (23.10.15) um 15 Uhr ausgelesen. (Tabelle \ref{dft:Raum}) \\
+Im Ersten Arbeitsschritt haben wir die Dosen an verschiedenen Stellen im Versuchsraum vermessen. Dabei ist zu beachten, dass das verwendete Dosisleistungsmessgerät Messwerte über einen bestimmten Zeitraum (ca. 30 Sekunden) mittelt. Außerdem handelt es sich um die Dosen, welche am morgen zum Arbeitsbeginn (Tabelle \ref{dft:Arbeitsplatz}) gemessen wurden. 
+Im zweiten Schritt haben wir mittels vier der BeO-Sonden, die von der Betreuerin am 21.10.2015 um 16:30 Uhr im Raum verteilt deponiert wurden, am Nachmittag des Versuchstages (23.10.15) um 15 Uhr ausgelesen. (Tabelle \ref{dft:Raum}) \\
 	
 \minipanf
 	\begin{center}
-					\begin{tabular}{l|c|c|c}
-								\textbf{Ort} & \textbf{\.D} [$\mu$Sv/h] & \textbf{\.D} [mSv/a]  & \textbf{t$_{max}$} [h]\\ 
-						\hline  Arbeitsplatz (vor PC) & 0,15  &   1,31 & 109,59\\ 
-								50cm hinter Quelle    & 0,77  &   6,75 &  21,35\\ 
-								50cm rechts der Quelle& 2,28  &  19,97 &   7,21\\ 
-								50cm links der Quelle & 2,41  &  21,11 &   6,82\\ 
-								50cm vor der Quelle   & 6,34  &  55,53 &   2,59\\ 
-								8cm hinter der Quelle & 5,20  &  45,55 &   3,16\\ 
-								8cm vor der Quelle    & 61,20 & 536,11 &   0,27\\
-						\hline  50cm hinter Quelle    & 1,06  &   9,29 &  15,51\\
-								50cm rechts der Quelle& 2,68  &  23,48 &   6,13\\ 
-								50cm links der Quelle & 3,22  &  28,71 &   5,11\\
+					\begin{tabular}{rl|c|c|c}
+								\textbf{Kollimator} & \textbf{Ort} & \textbf{\.D} [$\mu$Sv/h] & \textbf{\.D} [mSv/a]  & \textbf{t$_{max}$} [h]\\ 
+						\hline  \multirow{7}{*}{geschlossen} &Arbeitsplatz (vor PC) & 0,15  &   1,31 & 109,59\\ 
+							  &	50cm hinter Quelle    & 0,77  &   6,75 &  21,35\\ 
+							  &	50cm rechts der Quelle& 2,28  &  19,97 &   7,21\\ 
+							  &	50cm links der Quelle & 2,41  &  21,11 &   6,82\\ 
+							  &	50cm vor der Quelle   & 6,34  &  55,53 &   2,59\\ 
+							  &	8cm hinter der Quelle & 5,20  &  45,55 &   3,16\\ 
+							  &	8cm vor der Quelle    & 61,20 & 536,11 &   0,27\\
+						\hline \multirow{3}{*}{geöffnet} & 50cm hinter Quelle    & 1,06  &   9,29 &  15,51\\
+							  &	50cm rechts der Quelle& 2,68  &  23,48 &   6,13\\ 
+							  &	50cm links der Quelle & 3,22  &  28,71 &   5,11\\
 					\end{tabular}	
-					\captionof{table}{Messtabelle für Dosisleistung an verschiedenen Orten und der daraus resultierenden maximalen Verweildauer pro Tag.}
+					\captionof{table}{Messtabelle für Dosisleistung an verschiedenen Orten und der daraus resultierenden maximalen Verweildauer bemessen an der Maximaldosis pro Arbeitstag.}
 					\label{dft:Arbeitsplatz}
-					\vspace{8mm}
+    \end{center}
+\minipend
+\vspace{1mm}
+\minipanf
+   \begin{center}
+                    \vspace{8mm}
 					\begin{tabular}{l|c|c|c}
 								\textbf{Ort} & \textbf{BeO-Nr.} & \textbf{LS} [mVs] & \textbf{D} [mGy] \\
 						\hline  \"{}Mitfahrer vor Quelle\" & 003337 & 14,19 & 0,5028 \\
@@ -40,7 +45,7 @@ Die BeO-Nummer ist die Identifikationsnummer des Sensors. Dadurch lassen sich al
 		
 \subsection{Winkelabhängigkeit einer Ionisationskammer} \label{sec:Ionkammer}
 
-Nun wenden wir uns der Messungen bezüglich der Winkelabhängigkeit einer zylindrischen Ionenstrahlkammer zu. Die Messung startet bei 180\textdegree und dauert pro Winkel jeweils 60 Sekunden.
+Nun wenden wir uns der Messungen bezüglich der Winkelabhängigkeit einer zylindrischen Ionisationskammer zu. Die Messung startet bei 180\textdegree und dauert pro Winkel jeweils 60 Sekunden.
 Es handelt sich hier um eine aktive Sonde, die über ein Leichtleiterkabel an ein Anzeigegerät, welches alle gemessenen Werte innerhalb des Messzeitintervalls einer Messung automatisch aufsummiert, angeschlossen wurde.
 
 \vspace{5mm}
@@ -64,7 +69,7 @@ Es handelt sich hier um eine aktive Sonde, die über ein Leichtleiterkabel an ei
 		\captionof{table}{Messwerte aus der Winkelabhängigkeit der Zylinderkammer.}
 		\label{dft:Winkel}
 	\end{center}
-Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die vorgegebene Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt. Während der Messungen betrugen die Temperatur im Raum $T = (294,75\pm 0,3)K$, der Druck $p = (100,52 \pm 0,01)kPa$ und die Luftfeuchtigkeit 54\%. Dabei sind die Fehler für Temperatur und Druck abgeschätzt. Während die Temperatur im Raum Schwankungen unterworfen war, konnte der Luftdruck nahezu erhalten bleiben. Bezüglich D$_0$ schätzen wir aufgrund des statistischen Charakters während der Messungen inklusive des Digits einen Fehler von $\Delta \dot{D} = 0,03\mu$Gy ab\\
+Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen. Dabei sind 180\textdegree gerade die vorgegebene Vorzugsrichtung, in der die Kammer Richtung Quelle zeigt. Dies wurde am Gerät durch eine eine grüne Strichmarkierung angezeigt. Während der Messungen betrugen die Temperatur im Raum $T = (294,75\pm 0,3)K$, der Druck $p = (100,52 \pm 0,01)kPa$ und die Luftfeuchtigkeit 54\%. Dabei sind die Fehler für Temperatur und Druck abgeschätzt. Während die Temperatur im Raum Schwankungen unterworfen war, konnte der Luftdruck nahezu erhalten bleiben. Bezüglich D$_0$ schätzen wir aufgrund des statistischen Charakters während der Messungen inklusive des Digits einen Fehler von $\Delta D = 0,03\mu$Gy ab\\
 \.D bezeichnet die Luftdruck-Temperatur-korrigierte Dosisleistung. Sie ergibt sich folgendermaßen aus Formel (\ref{formel:kappa}):
 
 \begin{equation*}
