--- a/DO/Protokoll/DO_Protokoll_phys.tex
+++ b/DO/Protokoll/DO_Protokoll_phys.tex
@@ -54,15 +54,15 @@ Unregelmäßigkeiten im Kristallgitter erzeugen zwischen Leitungs- (LB) und Vale
     \captionof{figure}{Schema zur optisch stimulierten Lumineszenz \cite{PA_neu}}
     \label{fig:band}
     \minipend
-\end{center}
-
+\end{center} 
+\ \\
 Im Grundzustand befinden sich Elektronen nur im Valenzband und den Aktivatortermen.
-Regt man das System allerdings an, zum Beisiel durch ionisierende Strahlung, können einige Elektronen vom Grundzustand auf das Leitungsband oder die Hafterme springen. Aus dem Leitungsband springen sie entweder direkt un den Grundzustand, wobei sie Licht emittieren, oder fallen zunächst auf den metastabilen Zustand im Haftterm, der die Elektronen einige Zeit speichert.
+Regt man das System allerdings an, zum Beisiel durch ionisierende Strahlung, können einige Elektronen vom Grundzustand auf das Leitungsband oder die Hafterme springen. Aus dem Leitungsband springen sie entweder direkt in den Grundzustand, wobei sie Licht emittieren, oder fallen zunächst auf den metastabilen Zustand im Haftterm, der die Elektronen einige Zeit speichert.
 Fällt nun Licht mit einer speziellen Wellenlänge auf das zuvor bestrahlte Material, springen die Elektronen aus den Hafttermen in das Leitungsband und fallen von dort meist in den Grundzustand, wobei sie Licht emittieren. \cite{PA_alt}
 
 \subsection{BeO$max$-Funktionsprinzip}
 Wir benutzen hier passive Sonden aus Berylliumoxid als Leuchtstoff. Diese Verbindung hat eine effektive Ordnungszahl von 7,13, was eine hohe Ähnlichkeit zu menschlichem Gewebe (Weichteile: 7,42, Knochen: 10) darstellt und deshalb ähnliche Absorptionseigenschaften besitzt.
-Man bestrahlt die Sonden für ein zuvor berechnetes Zeitintervall. Danach sollte eine Abklingzeit von ca. 15 Minuten eingehalten werden, ehe die Sonden belichtet und ausgelesen werden. Damit wird ein Rauschen vermieden und sichergestellt, dass nur die in den Hafttermen gespeicherten Elektronen eine Rolle bei der Erzeugung des Lumineszenzlichtes spielen, bevor die Haftterme optisch angeregt werden.\\
+Man bestrahlt die Sonden für ein zuvor berechnetes Zeitintervall. Danach sollte eine Abklingzeit von ca. 15 Minuten eingehalten werden, ehe die Sonden belichtet und ausgelesen werden. Damit wird das sogenannte Kurzzeitfading vermieden und sichergestellt, dass nur die in den Hafttermen gespeicherten Elektronen eine Rolle bei der Erzeugung des Lumineszenzlichtes spielen, bevor die Haftterme optisch angeregt werden.\\
 Die passiven Sensoren haben jeder für sich ein spezifisches Ansprechvermögen, welches aus einem Signal vor der Bestrahlung, sowie nach der Bestrahlung und einer bekannten Referenzdosis bestimmt werden kann. Das Signal aus der Nullmessung ändert sich nach jeder optischen Stimulation und muss von Chip zu Chip und Messung zu Messung immer neu bestimmt werden. Damit berechnet sich das Ansprechvermögen folgendermaßen:
 
 \begin{equation} \label{eq:ansprechvermoegen}
