--- a/PET/Protokoll/PET_Protokoll_ausw.tex
+++ b/PET/Protokoll/PET_Protokoll_ausw.tex
@@ -23,4 +23,4 @@ Es zeigt sich, dass die gegebenen Filter unterschiedliche Qualitäten haben. So 
 Von Interesse ist hier auch das Sinogramm, welches bei mehreren Quellen auch mehrere Streifen zeigt. 
 Danach schaut man sich die Unterschiede von isotroper und anisotropen Abschirmungen an. Man erfährt, dass Anisotropien stets gespiegelt aufgenommen werden, jedoch durch eine 
 Korrekturfunktion, die es günstig zu erraten gilt, ausgeglichen werden können. 
-In diesem Protokoll wurde als Korrektur eine Gauß-Funktion angewendet. ---
+In diesem Protokoll wurde als Korrektur eine Gauß-Funktion angewendet.
