--- a/PET/Protokoll/PET_Protokoll_main.tex
+++ b/PET/Protokoll/PET_Protokoll_main.tex
@@ -37,6 +37,7 @@
 \input{PET_Protokoll_phys}		% Physikalischer Hintergrund
 \input{PET_Protokoll_df}		% Durchführung
 \input{PET_Protokoll_ausw}		% Auswertung bzw. Zusammenfassung
+\input{PET_Protokoll_Anhang}    % Messprotokoll/Anhang
 \include{PET_Protokoll_literatur}
 
 \end{document}
