and again some modificatios - please correct my language mistakes... :D

--- a/MMC/protokoll/MMC_protocol_exp.tex
+++ b/MMC/protokoll/MMC_protocol_exp.tex
@@ -10,7 +10,7 @@
         Unfortunately our assay showed that no MT's were fixed in it, so we could not take any pictures. Maybe this was caused by a too thin microtubules solution. This is why we can not compare two different conditions. We used the assay of our co-workers instead. 
         After we focused the MTs, we stop live imaging and take a picture of the MTs which luminescate by rhodamine. \\
         After that we take the GFP filter and choose the laser illumination. Then we choose again live imaging ("show live"). The the TIRF angle will be adjusted.  %note: can we make out the transiotion to the tirf mode?
-        Again we choose the TRITC filter on the taskbar, the lamp illumination and take live imaging. We move to a new field of view, focus properly and take an image of the MTs such as in figure \ref{exp:mts}\\
+        Again we choose the TRITC filter on the taskbar, the lamp illumination and take live imaging. We move to a new field of view, focus properly and take an image of the MTs such as in figure \ref{exp:mts}.\\
         \begin{center}
              \includegraphics[scale=0.4]{pic/exampleMT.jpeg}  
              \captionof{figure}{Example of an image, where we focused on the MTs}
@@ -18,7 +18,7 @@
         \end{center}
         Then we save an image of this position. We now switched again to the GFP filter, selected the laser as light source and take live imaging. We can see moving motors. We stop live imaging and take a movie via the acquire button. The number of frames we took is 1000. 
         For one frame the camera needs $\unit[150]{ms}$, so at the end one we wait 150s per video stream. We took 8 movies. 
-        When all streams are collected, one can do the data processing with FIESTA. There you can mark the microtubles and the software will show, if there is motion. If ther is motion, one can mark up the lines and get the time which was needed for the marked distance.
+        When all streams are collected, one can do the data processing with FIESTA. There you can mark the possible trajectories of the motor proteins (as seen in figure \ref{exp:markex1}) and the software will calculate pieces of the picture where the height is the time dimension and the width is the movement. If there is motion, one can mark up the lines and get the time which was needed for the marked distance (see figure \ref{exp:markex2}).
         \begin{center}
                 \begin{tabular}{p{7cm}p{5cm}c}
                    \minipanf 
