--- a/MMC/protokoll/MMC_protocol_exp.tex
+++ b/MMC/protokoll/MMC_protocol_exp.tex
@@ -5,11 +5,10 @@
 \subsection{Stream acquisition}
         First the experimental supervisor placed the flow cell holder on the microscope stage. We used an oil objective which has to touch the bottom of the flow cell. The objective has a magnification of 100x and a numerical aperture of 1,46.  
         After the assay was fixed we used a Software called MetaMorph. We chose the camera button. We used a digital Camera by Andor which took greyscaled pictures. Its resolution is $\unit[2.6]{MPixel}$ with 512x512 pixels. The size of one pixel ist $\unit[256]{\mu m^2}$.
-        According to the meta data of the movies and pictures the chosen additional magnification of the camera is 1.0x. This means, the pixel size is the original pixel size of the camera. If it would be 2.5x, we could se 2.5 times less, so a pixel would be $A = \unit[256]{\mu m^2} / 2.5 = 102.4$. 
+        According to the meta data of the movies and pictures the chosen additional magnification of the camera is 1.0x. This means, the pixel size is the original pixel size of the camera. If it had been 2.5x, we could have seen 2.5 times less, so a pixel would have been $A = \unit[256]{\mu m^2} / 2.5 = 102.4\ \unit{\mu m^2}$. 
         So we took the TRITC filter and the lamp on the taskbar and watched the live images token by the camera. We searched and focused a cutout where we could see enough MTs. 
-        Unfortunately our assay showed that no MT's were fixed in it, so we could not take any pictures. Maybe this was caused by a too thin microtubules solution. This is why we can not compare two different conditions. We used the assay of our co-workers instead. 
-        After we focused the MTs, we stop live imaging and take a picture of the MTs which luminescate by rhodamine. \\
-        After that we take the GFP filter and choose the laser illumination. Then we choose again live imaging ("show live"). The the TIRF angle will be adjusted.  %note: can we make out the transiotion to the tirf mode?
+        Unfortunately our assay showed that no MT's were fixed in it, so we could not take any pictures. Maybe this was caused by a too thin microtubule- or antibody-solution. We used the assay of our co-workers instead.\\ 
+        After we focused the MTs, we stopped live imaging and took pictures of the MTs luminescated by rhodamine. After that we take the GFP filter and choose the laser illumination. Then we choose again live imaging ("show live"). The TIRF angle will be adjusted.  %note: can we make out the transiotion to the tirf mode?
         Again we choose the TRITC filter on the taskbar, the lamp illumination and take live imaging. We move to a new field of view, focus properly and take an image of the MTs such as in figure \ref{exp:mts}.\\
         \begin{center}
              \includegraphics[scale=0.4]{pic/exampleMT.jpeg}  
